# PROG2006-Advanced-Programming

./: .gitignore  README.md
Assignments/assigmentweek12023/: FizzBuzz.hs  hello.hs
Haskell/labs/lab03/: LabText.md  README.md  lab03.cabal  package.yaml
Haskell/labs/lab03/app/: Main.hs
Haskell/labs/lab03/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
Haskell/labs/lab03/test/: Spec.hs  Task1Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs
Haskell/labs/lab04/: LabText.md  README.md  lab04.cabal  package.yaml
Haskell/labs/lab04/app/: Main.hs
Haskell/labs/lab04/src/: Task1.hs  Task2.hs  Task3.hs
Haskell/labs/lab04/test/: Spec.hs  Task1Spec.hs  Task2Spec.hs  Task3Spec.hs
Haskell/labs/lab05/: Labtext.md  README.md  lab05.cabal  package.yaml
Haskell/labs/lab05/app/: Main.hs
Haskell/labs/lab05/src/: Task1.hs  Task2.hs  (+2 more)
Haskell/labs/lab06/: LabText.md  README.md  lab06.cabal  package.yaml
Haskell/labs/lab07/: README.md  lab07.cabal  package.yaml
Notes/Haskell/: Practice.hs  gaurds.hs  recurssion.hs  syntaxBasics.hs  where.hs
labs/lab01/: Task1.sol
rust/lab08/: Cargo.toml  README.MD
rust/lab08/src/: birds.rs  main.rs  reverse.rs  students.rs
rust/lab09/: Cargo.toml  README.md
rust/lab09/src/: main.rs  render_html.rs
rust/lab09/src/routes/: announcements.rs  greet.rs  hello.rs  mod.rs
rust/lab09/src/static/: app.js  style.css
rust/lab09/src/templates/: announcements.html
rust/lab10/: Cargo.toml  README.md
rust/lab10/src/: game.rs  main.rs  render.rs  types.rs
solidity/lab01/: README.md
solidity/lab01/lab01/: README2.md  Task2.sol
(+15 files in other folders)
