[package]
name = "lab09"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] } 
html-escape = "0.2"                               
tower-http = { version = "0.5", features = ["fs"] }
regex = "1"